[package]
name = "jumble"
version = "0.3.0"
edition = "2021"
description = "An MCP server that provides queryable, on-demand project context to LLMs"
license = "MIT"
repository = "https://github.com/aurabx/jumble"
keywords = ["mcp", "llm", "context", "ai"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
walkdir = "2"
anyhow = "1"
serde_yaml = "0.9"
